# mmdetection3d-liyj

configs/fcos3d/: fcos3d_r101-caffe-dcn_fpn_head-gn_8xb2-1x_nus-mono3d_v1.0-min.py
demo_bevfuse_mvxnet/: bevfuse_infer.py
local_files/: run_get_gflops.sh  run_infer.sh  run_prepare_dataset.sh  run_test.sh  run_trian_single_gpu.sh  test_tmp.sh
local_files/debug_bevfuse/: debug_others.py  mvxnet_infer.py  note.py
local_files/debug_gbld/: debug_dataset.py  debug_dataset_orient.py  debug_datasetv2.py  debug_img_preprocess.py  debug_line_orient_decode.py  debug_line_orient_encode_decode.py  debug_line_post_process.py  debug_loss.py  debug_model.py  debug_model_infer.py  debug_model_infer_decode.py  debug_model_infer_loss.py  debug_model_test.py  debug_model_visualizer.py  debug_others.py  debug_params.py  debug_pieces_line.py  debug_principle.py  debug_registry.py  debug_seg_heat_map_generate.py  debug_show_metric.py  debug_slim_points.py  debug_utils.py  debug_utils_metric.py  debug_utils_vis.py  debug_zhosuen_slim.py  demo_model_infer.py  demo_model_infer_compare_gt.py  demo_model_infer_save_heatmap.py  gbld_mono2d_decode_numpy.py  readme.txt
local_files/debug_gbld/c_pp_deploy/: task_edge_line_decoder.cpp
local_files/debug_gbld/mm_px/per_tools/: BUILD.bazel  frame-extractor.py  fsd_synchronizer.cpp  record_dds.py  record_dds.sh
local_files/debug_gbld/mm_px/per_tools/KPI_evaluator/: inference_json_generator.h  main.cpp  template_pred_mod.txt
local_files/debug_gbld/mm_px/per_tools/KPI_evaluator/json/: gason.h  json_builder.cpp  json_formatter.h
local_files/debug_gbld/mm_px/per_tools/onnx2trt_orin/: Makefile_std  upload_tools.sh
local_files/debug_gbld/mm_px/per_tools/onnx2trt_orin/Inference_Service_Demon/: Makefile  Readme.md  test_multi_models
local_files/debug_gbld/mm_px/per_tools/onnx2trt_orin/Inference_Service_Demon/include/: common.h  consumer_socket_service.h  directShmem.h  helper.h  inference_client.h  inference_server.h  onnxtrt.h  producer_socket_service.h  socket_service.hpp
local_files/debug_gbld/mm_px/per_tools/onnx2trt_orin/Inference_Service_Demon/src/: consumer_socket_service.cpp  directShmem.cpp  inference_client.cpp  inference_server.cpp  inference_service.cpp  network_client.cpp  producer_socket_service.cpp
local_files/debug_gbld/mm_px/per_tools/onnx2trt_orin/plugin/: BatchConcatPad.cu  BatchConcatPad.h  Channel2spatial.cu  Channel2spatial.h  ConfidenceFilter.cu  ConfidenceFilter.h  ConfidenceFilterDLA.cu  ConfidenceFilterDLA.h  ConvLSTM.cu  ConvLSTM.h  FusedMultiHeadAttention.cu  FusedMultiHeadAttention.h  GridSampler.cu  GridSampler.h  MSDeformableAttention.cu  MSDeformableAttention.h  Res2ChannelPad.cu  Res2ChannelPad.h  ResizeNearest.cu  ResizeNearest.h  SliceV2.cu  SliceV2.h  UpsampleInt8.cu  UpsampleInt8.h  VoxelGenerator.cu  VoxelGenerator.h  YhatsFilter.cu  YhatsFilter.h  builtin_mask_importers.h  common.cu  common.h  data_convert.cu  data_convert.h  gemvInt8.cu  gemvInt8.h  macros.h  yololayer.cu  yololayer.h
local_files/debug_gbld/mm_px/per_tools/onnx2trt_orin/python/: compare_result.py  compare_result.sh  compile_empty.sh  cuda_graph.py  cuda_graph.sh  cuda_graph_model.sh  run_onnx.py
local_files/debug_gbld/mm_px/per_tools/onnx2trt_orin/sample/: maskrcnn.cpp  maskrcnn_mulit_models.cpp  profile_model.cpp  read_calib.cpp  test_kpi.cpp  test_models_cuda.cu
local_files/debug_gbld/mm_px/per_tools/onnx2trt_orin/sample/dms_pipeline/: Makefile.inc  Makefile_QNX  config.h  dms_cuda_kernel.cuh  dms_cuda_utils.cu  dms_cuda_utils.h  dms_pipeline.cpp  dms_pipeline.h  face_detection.cpp  face_detection.h  half_convert.cpp  half_convert.h  inference_tool.cpp  inference_tool.h  landmark.cpp  landmark.h  main.cpp  onnxtrt.h  utils.h
local_files/debug_gbld/mm_px/per_tools/onnx2trt_orin/src/: ResizeBilinear.hpp  onnx2trt.cpp  onnx2trt.cpp.networkV2  onnx2trt_dla.cpp  onnx2trt_dla_or.cpp  onnx2trt_empty.cpp  onnx2trt_lib.cpp  onnx2trt_lite.cpp  onnxtrt.h
local_files/debug_gbld/mm_px/per_tools/onnx2trt_rcnn/: CMakeLists.txt  Makefile_QNX  README.md  convert_trt.sh  download_model.sh
local_files/debug_gbld/mm_px/per_tools/onnx2trt_rcnn/plugin/: MaskrcnnPlugin.hpp  RetinaNetPlugin.hpp  RoIAlign.cu  UpsampleInt8.h  builtin_mask_importers.h  builtin_mask_plugins.h  gemvInt8.cu  retinanet_nms.cu  topKnms.h
local_files/debug_gbld/mm_px/per_tools/onnx2trt_rcnn/python/: ModuleOne.py  test_part.py
local_files/debug_gbld/mm_px/per_tools/onnx2trt_rcnn/sample/: maskrcnn.cpp  maskrcnn_mulit_models.cpp  test_models_cuda.cu
local_files/debug_gbld/mm_px/per_tools/onnx2trt_rcnn/src/: conv_relu.h  onnx2trt.cpp  onnxtrt.h
local_files/debug_gbld/mm_px/xpl_tools/: BUILD.bazel  README.md  fsd_synchronizer.cpp  kill_process.sh  plot_profiler_output.py
local_files/debug_gbld/mm_px/xpl_tools/KPI_evaluator/: CMakeLists.txt  inference_json_generator.cpp
local_files/debug_gbld/mm_px/xpl_tools/KPI_evaluator/json/: gason.cpp  json_builder.h  json_formatter.cpp
local_files/debug_gbld/mm_px/xpl_tools/onnx2trt_rcnn/: Makefile  combined_yaml.py  reform_pad_split.py  upload_model.sh
local_files/debug_gbld/mm_px/xpl_tools/onnx2trt_rcnn/plugin/: maskrcnn_roi.cpp  topKnms.cu  upSampleInt8.cu
local_files/debug_gbld/mm_px/xpl_tools/onnx2trt_rcnn/python/: infer_simple_onnx.py  infer_tensorrt_c.py  maskrcnn_frontend.py
local_files/debug_gbld/mm_px/xpl_tools/onnx2trt_rcnn/sample/: maskrcnn.c  maskrcnn_mulit_models.cpp  test_models_cuda.cu
local_files/debug_gbld/mm_px/xpl_tools/onnx2trt_rcnn/src/: ResizeBilinear.hpp  conv_relu.cpp  onnx2trt.cpp  onnx2trt_lib.cpp
local_files/debug_gbld/mmalpha/: __init__.py
local_files/debug_gbld_detr/: 0_debug_dataset.py  1_debug_loss.py  2_debug_model_infer_loss.py  debug_others.py  vis_utils.py
projects/GrasslandBoundaryLine2D/: dist_train_v0.4.sh  install_mmversion.txt  test.sh  train.sh  train_v0.2.sh  train_v0.3.sh  train_v0.4.sh
projects/GrasslandBoundaryLine2D/configs/: gbld_config_v0.3.py  gbld_config_v0.4_overfit.py  gbld_debug_config.py  (+1 more)
projects/GrasslandBoundaryLine2D_DETR/: train_overfit.sh
tools/: train.py
(+80 files in other folders)
